# dendros

./: .gitattributes  .gitignore  Cargo.toml  README.md  bugs.md  build.sh  clippy.toml  dendros.code-workspace  rustfmt.toml
benches/: newick_parser.rs  newick_parser_detect_format.rs  nexus_parser.rs  nexus_parser_detect_format.rs
examples/: advanced_parsing.rs  attributes.rs  basic_parsing.rs  format_compatibility.rs  ltt.rs  newick.rs  nexus.rs  parsing_performance.rs  tree.rs  tree_manipulation.rs  tree_validation.rs  working_with_attributes.rs
src/: lib.rs  newick.rs  nexus.rs  parsers.rs  phylo.rs
src/newick/: attributes.rs  labels.rs  nhx.rs  validation.rs
src/nexus/: parser.rs
src/parsers/: newick.rs  nexus.rs
src/parsers/newick/: attributes.rs  nhx.rs  validation.rs
src/phylo/: attribute.rs  edges.rs  flatten.rs  ltt.rs  node.rs  tree.rs
tests/: attribute_management_test.rs  attribute_validation_test.rs  color_attribute_test.rs  format_compatibility_test.rs  hex_colors_in_lists_test.rs  iqtree_file_test.rs  iqtree_parsing_test.rs  newick.rs  newick_basic_test.rs  newick_iqtree_test.rs  nexus.rs  nexus_test.rs  old.rs  old_tests.rs  old_unit_tests.rs  parse_trees.rs  parsing_performance_test.rs  tree_polytomies_test.rs  tree_structure_test.rs
tests/data/: carnivore.tre  extended_newick_hybrid.newick  influenza.no.single.quotes.on.tips.tre  influenza.tre  influenza_2_trees.tree  nhx_format_example.newick  rich_newick_extended_bootstrap.newick  rich_newick_rooted.newick  rich_newick_unrooted.newick  sumtrees.newick
tests/data/Czech_Huerta-Cepas_Stamatakis_2017/: Czech_Huerta-Cepas_Stamatakis_2017_unrooted.newick
tests/data/iqtree/: turtle_aa.fasta.treefile.cf.branch  turtle_aa.fasta.treefile.cf.stat  turtle_aa.fasta.treefile.cf.tree.newick  turtle_aa.fasta.treefile.cf.tree.nex  turtle_aa.fasta.treefile.cf.tree.nex.newick
tests/data/raxml/: bestTree.newick  bipartitions.newick  bipartitionsBranchLabels.newick  bootstrap.newick
