[package]
    authors=["Karolis Ramanauskas"]
    categories=["science::bioinformatics"]
    edition="2024"
    license-file="LICENSE"
    name="dendros"
    readme="README.md"
    repository="https://github.com/karolisr/dendros"
    rust-version="1.88"
    version="0.1.0"

[lib]
    crate-type=["lib"]
    name="dendros"

[dependencies]
    rayon="1.10.0"
    slotmap="1"
    thiserror="2"

[profile.dev] # ------------------------------------------------------------------------------------
    codegen-units=6       # 256
    debug=true            # true
    debug-assertions=true # true
    incremental=true      # true
    lto=false             # false
    opt-level=1           # 1
    overflow-checks=true  # true
    panic="abort"         # "unwind"
    rpath=false           # false
    strip=false           # false

[profile.release] # --------------------------------------------------------------------------------
    codegen-units=1        # 16
    debug=false            # false
    debug-assertions=false # false
    incremental=true       # false
    lto=true               # false
    opt-level=3            # 3
    overflow-checks=true   # false
    panic="abort"          # "unwind"
    rpath=false            # false
    strip=true             # "none"
