[package]
    authors=["Karolis Ramanauskas"]
    categories=["science::bioinformatics"]
    description="A small phylogenetic tree library."
    edition="2024"
    keywords=["bioinformatics", "evolution", "newick", "phylogenetics", "trees"]
    license-file="LICENSE"
    name="dendros"
    readme="README.md"
    repository="https://github.com/karolisr/dendros"
    rust-version="1.88"
    version="0.19.0"

[lib]
    crate-type=["lib"]
    name="dendros"

[dependencies]
    rayon="1.11.0"
    slotmap="1.1.1"
    thiserror="2.0.17"

[dev-dependencies]
    criterion={version="0.8.1", features=["html_reports"]}

[profile.dev] # ------------------------------------------------------------------------------------
    codegen-units=6       # 256
    debug=true            # true
    debug-assertions=true # true
    incremental=true      # true
    lto=false             # false
    opt-level=1           # 1
    overflow-checks=true  # true
    panic="abort"         # "unwind"
    rpath=false           # false
    strip=false           # false

[profile.release] # --------------------------------------------------------------------------------
    codegen-units=1        # 16
    debug=false            # false
    debug-assertions=false # false
    incremental=true       # false
    lto=true               # false
    opt-level=3            # 3
    overflow-checks=true   # false
    panic="abort"          # "unwind"
    rpath=false            # false
    strip=true             # "none"

[lints.rust]
    missing_debug_implementations="deny"
    # missing_docs="warn"
    unsafe_code="deny"
    unused_results="deny"

[lints.clippy]
    collapsible_if="allow"
    default_trait_access="allow"
    filter_map_next="deny"
    from_over_into="deny"
    large-enum-variant="allow"
    manual_let_else="deny"
    map-entry="allow"
    match-wildcard-for-single-variants="deny"
    needless_borrow="deny"
    new_without_default="deny"
    redundant-closure-for-method-calls="deny"
    result_large_err="allow"
    semicolon_if_nothing_returned="deny"
    single_match="allow"
    trivially-copy-pass-by-ref="deny"
    type-complexity="allow"
    uninlined_format_args="allow"
    unused_async="deny"
    useless_conversion="deny"

[lints.rustdoc]
    broken_intra_doc_links="forbid"

[[bench]]
    harness=false
    name="newick_parser"

[[bench]]
    harness=false
    name="newick_parser_detect_format"

[[bench]]
    harness=false
    name="nexus_parser"

[[bench]]
    harness=false
    name="nexus_parser_detect_format"
